# djangoviews

./: .gitignore  README.md  pyproject.toml
djangoviews/: apps.py  fields.py  models.py
djangoviews/db/backends/postgresql/: base.py
