[tool.poetry]
name = "djangoviews"
version = "0.1.0"
description = ""
authors = ["Alex Fricker <fricker.alex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
ipython = "^8.22.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
